--- a/app/components/header/Header.module.css
+++ b/app/components/header/Header.module.css
@@ -1,8 +1,17 @@
 .header {
-    display: flex;
-    width: 100%;
-    height: 100px;
-    justify-content: space-between;
-    align-items: center;
-    background-color: cornflowerblue;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 50px;
+  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),
+    0 2px 4px -2px rgba(0, 0, 0, 0.1); /* Equivalent to Tailwind shadow-md */
+}
+.content {
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  max-width: 72rem;
+  height: 100%;
+  align-items: center;
+  justify-content: space-between;
 }
